import "Blobs.proto";
import "Local.proto";

package contester.proto;

option java_package = "org.stingray.contester.proto";

message Compilation {
    enum Code {
        Success = 1;
        Failure = 2;
    }

    message Result {
        optional string step_name = 1;
        optional LocalExecution execution = 2;
        optional bool failure = 3;
    }

    optional bool failure = 1;
    repeated Result result_steps = 2;
};
